--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,9 +20,11 @@
         <div id="huxblog_navbar">
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ site.baseurl }}/">Home</a></li>
-                    <li><a href="/leetcode"><span>Leetcode</span></a></li>
-                    {% for page in site.pages %}
+                    <li>
+                        <a href="{{ site.baseurl }}/">Blog</a>
+                    </li>
+                    {% for post in site.categories.blog %}
+                    <!-- {% for page in site.pages %} -->
                     {% if page.title and page.hide-in-nav != true %}
                     <li>
                         <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
