--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,6 +23,7 @@
                     <li>
                         <a href="{{ site.baseurl }}/">Blog</a>
                     </li>
+                    <li><a href="/leetcode"><span>Leetcode</span></a></li>
                     {% for page in site.pages %}
                     {% if page.title and page.hide-in-nav != true %}
                     <li>
